Add findInteriorIntersection and isEndpoint utilities to ConvertTools